--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -75,6 +75,11 @@
             /*top: 50%;*/
         }
 
+        .star-select {
+            width: 30%;
+            margin-left: 20px;
+        }
+
         .star-box {
             /*background-color: darkorange;*/
             width: 70%;
@@ -199,7 +204,7 @@
         <option value="교양 인문학">교양 인문학</option>
     </select>
 
-    <input type="email" class="form-control" id="search-box" placeholder="검색">
+    <input type="text" class="form-control" id="search-box" placeholder="검색">
 
     <input class="btn btn-primary" type="button" onclick="searchBook()" value="검색">
 </div>
@@ -215,58 +220,61 @@
             <option value="3">가격 낮은순</option>
         </select>
         <div class="star-area">
-            <h3 class="star-point">별점</h3>
+            <div class="star-select">
+                <h3 class="star-point">별점</h3>
+                <button style="font-size: 0.6em" onclick="deselect()">선택 해제</button>
+            </div>
             <div class="star-box">
                 <div class="star-box-left">
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="star1"
+                        <input class="form-check-input" type="radio" name="star" id="star1"
                                value="1">
                         <label class="form-check-label" for="star1">1</label>
                     </div>
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="star2"
+                        <input class="form-check-input" type="radio" name="star" id="star2"
                                value="2">
                         <label class="form-check-label" for="star2">2</label>
                     </div>
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="star3"
+                        <input class="form-check-input" type="radio" name="star" id="star3"
                                value="3">
                         <label class="form-check-label" for="star3">3</label>
                     </div>
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="star4"
+                        <input class="form-check-input" type="radio" name="star" id="star4"
                                value="4">
                         <label class="form-check-label" for="star4">4</label>
                     </div>
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="star5"
+                        <input class="form-check-input" type="radio" name="star" id="star5"
                                value="5">
                         <label class="form-check-label" for="star5">5</label>
                     </div>
                 </div>
                 <div class="star-box-right">
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="star6"
+                        <input class="form-check-input" type="radio" name="star" id="star6"
                                value="6">
                         <label class="form-check-label" for="star6">6</label>
                     </div>
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="star7"
+                        <input class="form-check-input" type="radio" name="star" id="star7"
                                value="7">
                         <label class="form-check-label" for="star7">7</label>
                     </div>
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="star8"
+                        <input class="form-check-input" type="radio" name="star" id="star8"
                                value="8">
                         <label class="form-check-label" for="star8">8</label>
                     </div>
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="star9"
+                        <input class="form-check-input" type="radio" name="star" id="star9"
                                value="9">
                         <label class="form-check-label" for="star9">9</label>
                     </div>
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="star10"
+                        <input class="form-check-input" type="radio" name="star" id="star10"
                                value="10">
                         <label class="form-check-label" for="star10">10</label>
                     </div>
@@ -305,7 +313,7 @@
             <div class="price-input">
                 <input class="form-control form-control-sm" id="author" type="text"
                        placeholder="작가"
-                       aria-label=".form-control-sm example">
+                       aria-label=".form-control-sm example" value="">
             </div>
         </div>
         <input class="btn btn-primary" type="button" value="적용" onclick="applyFilter()">
@@ -337,12 +345,12 @@
 </body>
 <script th:inline="javascript">
     /*<![CDATA[*/
-    const params = new URLSearchParams(location.search)
+    const params = new URLSearchParams(location.search);
 
     let cid = params.get('cid') == null ? '' : params.get('cid');
     let query = params.get('query') == null ? '' : params.get('query');
     let totalRow = params.get('totalRow') == null ? '10' : params.get('totalRow');
-    let sort = params.get('sort') == null ? '' : params.get('sort');
+    let sort = params.get('sort') == null ? '0' : params.get('sort');
     let year = params.get('year') == null ? '' : params.get('year');
     let month = params.get('month') == null ? '' : params.get('month');
     let star = params.get('star') == null ? '' : params.get('star');
@@ -351,12 +359,28 @@
     let publish = params.get('publish') == null ? '' : params.get('publish');
     let author = params.get('author') == null ? '' : params.get('author');
     let page = [[${result.getPage()}]];
-    let totalCount = [[${result.getTotalCount()}]]
+    let totalCount = [[${result.getTotalCount()}]];
+
+    let star_name = 'star' + star;
+
+    $('#author').attr("value", author);
+    $('#publish').attr("value", publish);
+    $('#min-price').attr("value", minprice);
+    $('#max-price').attr("value", maxprice);
+    $('#year').attr("value", year);
+    $('#sort').val(sort).prop('selected', true);
+    $('#search-box').attr("value", query);
+    $('#' + star_name).prop('checked', true);
 
     if (page == 0) {
-        $('#before-button').hide()
+        $('#before-button').hide();
     } else if (Math.floor(totalCount / totalRow) == page || totalCount % totalRow == 0 && Math.floor(totalCount / totalRow) - 1 == page) {
-        $('#after-button').hide()
+        $('#after-button').hide();
+    }
+
+    function deselect() {
+        $('input:radio[name=star]:checked').prop('checked', false);
+        star = '';
     }
 
     function movePage(changedPage) {
@@ -366,6 +390,15 @@
     function searchBook() {
         query = $('#search-box').val();
         // cid는 카테고리 대/소분류 구현해야 적용 가능
+        cid = '';
+        sort = '0';
+        year = '';
+        month = '';
+        star = '';
+        minprice = '';
+        maxprice = '';
+        publish = '';
+        author = '';
         location.href = "/search?cid=" + cid + "&query=" + query + "&sort=" + sort + "&year=" + year + "&month=" + month + "&star=" + star + "&minPrice=" + minprice + "&maxPrice=" + maxprice + "&publish=" + publish + "&author=" + author + "&totalRow=" + totalRow + "&page=0";
     }
 
@@ -377,34 +410,10 @@
             author = $("#author").val();
             sort = $("#sort option:selected").val();
             year = $("#year").val();
-            selectStar()
+            if ($('input[name=star]:checked').val()) {
+                star = $('input[name=star]:checked').val();
+            }
             location.href = "/search?cid=" + cid + "&query=" + query + "&sort=" + sort + "&year=" + year + "&month=" + month + "&star=" + star + "&minPrice=" + minprice + "&maxPrice=" + maxprice + "&publish=" + publish + "&author=" + author + "&totalRow=" + totalRow + "&page=0";
-        }
-    }
-
-    function selectStar() {
-        if ($('input[id=star10]:checked').val()) {
-            star = $('input[id=star10]:checked').val();
-        } else if ($('input[id=star9]:checked').val()) {
-            star = $('input[id=star9]:checked').val();
-        } else if ($('input[id=star8]:checked').val()) {
-            star = $('input[id=star8]:checked').val();
-        } else if ($('input[id=star7]:checked').val()) {
-            star = $('input[id=star7]:checked').val();
-        } else if ($('input[id=star6]:checked').val()) {
-            star = $('input[id=star6]:checked').val();
-        } else if ($('input[id=star5]:checked').val()) {
-            star = $('input[id=star5]:checked').val();
-        } else if ($('input[id=star4]:checked').val()) {
-            star = $('input[id=star4]:checked').val();
-        } else if ($('input[id=star3]:checked').val()) {
-            star = $('input[id=star3]:checked').val();
-        } else if ($('input[id=star2]:checked').val()) {
-            star = $('input[id=star2]:checked').val();
-        } else if ($('input[id=star1]:checked').val()) {
-            star = $('input[id=star1]:checked').val();
-        } else {
-            star = ""
         }
     }
 
