--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -400,7 +400,7 @@
 <div class="wrap">
     <div id="book_info_area" class="row row-cols-1 row-cols-md-2 g-4">
         <tr th:each="book:${list}">
-            <div class="book-box" type="button" th:onclick="|location.href='@{/detail/{id}(id=${id})}'|">
+            <div class="book-box" type="button" th:onclick="|location.href='@{/detail/{id}(id=${book.id})}'|">
                 <div  class="image-area">
                         <img th:src="${book.image}" alt="My Image" width="110" height="170"/>
                 </div>
