feat: 메인페이지 프론트 category, babyCategory 추가#2

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -103,7 +103,7 @@
         box-shadow: 0 1px 0 1px rgba(0, 0, 0, 0.04);
     }
 
-    #baby-category {
+    #babyCategory {
 
         font-size: 0.7rem;
         font-family: Arial;
@@ -189,143 +189,6 @@
 </style>
 
 <script>
-    $(document).ready(function() {
-        listing();
-    });
-
-    function listing() {
-        $.ajax({
-            type:"GET",
-            url: "/main",
-            data: {},
-            success: function (response) {
-                for (let i = 0; i < response.length; i++){
-                    let image = response[i]['image']
-                    let title = response[i]['title']
-                    let price = response[i]['price']
-                    let author = response[i]['author']
-                    let publish = response[i]['publish']
-                    let star = response[i]['star']
-                    let year = response[i]['year']
-                    let month = response[i]['month']
-
-                    let temp_html = <div className="book-box">
-                        <div className="image-area">
-                            <img src="${image}" alt="My Image"/>
-                        </div>
-                        <div className="desc-area">
-                            <h5>${title}</h5>
-                            <h6>가격 : ${price} 원</h6>
-                            <h6>작가 : ${author}</h6>
-                            <h6>출판사 : #{publish}</h6>
-                            <h6>별점 : ${star} / 발행년도 : ${year}.${month}</h6>
-                        </div>
-                    </div>
-
-                    $('#book_info_area').append(temp_html)
-                }
-
-            }
-        })
-    }
-
-</script>
-
-<script>
-    function optionChange() {
-        var a = ['A-1','A-2','A-3'];
-        var b = ['B-1','B-2','B-3'];
-        var c = ['A-1','A-2','A-3'];
-        var d = ['B-1','B-2','B-3'];
-        var e = ['A-1','A-2','A-3'];
-        var f = ['B-1','B-2','B-3'];
-        var g = ['A-1','A-2','A-3'];
-        var h = ['B-1','B-2','B-3'];
-        var i = ['A-1','A-2','A-3'];
-        var j = ['B-1','B-2','B-3'];
-        var k = ['A-1','A-2','A-3'];
-        var l = ['B-1','B-2','B-3'];
-        var m = ['A-1','A-2','A-3'];
-        var n = ['B-1','B-2','B-3'];
-        var o = ['A-1','A-2','A-3'];
-        var p = ['B-1','B-2','B-3'];
-        var q = ['A-1','A-2','A-3'];
-        var r = ['B-1','B-2','B-3'];
-        var s = ['A-1','A-2','A-3'];
-        var t = ['B-1','B-2','B-3'];
-        var u = ['A-1','A-2','A-3'];
-        var v = ['B-1','B-2','B-3'];
-        var w = ['A-1','A-2','A-3'];
-        var x = ['B-1','B-2','B-3'];
-        var y = ['A-1','A-2','A-3'];
-        var z = ['B-1','B-2','B-3'];
-
-        var vv = $( '#category' ).val();
-        var oo;
-        if ( vv == 'a' ) {
-            oo = a;
-        } else if ( vv == 'b' ) {
-            oo = b;
-        } else if ( vv == 'c' ) {
-            oo = c;
-        } else if ( vv == 'd' ) {
-            oo = d;
-        } else if ( vv == 'e' ) {
-            oo = e;
-        } else if ( vv == 'f' ) {
-            oo = f;
-        } else if ( vv == 'g' ) {
-            oo = g;
-        } else if ( vv == 'h' ) {
-            oo = h;
-        } else if ( vv == 'i' ) {
-            oo = i;
-        } else if ( vv == 'j' ) {
-            oo = j;
-        } else if ( vv == 'k' ) {
-            oo = k;
-        } else if ( vv == 'l' ) {
-            oo = l;
-        } else if ( vv == 'm' ) {
-            oo = m;
-        } else if ( vv == 'n' ) {
-            oo = n;
-        } else if ( vv == 'o' ) {
-            oo = o;
-        } else if ( vv == 'p' ) {
-            oo = p;
-        } else if ( vv == 'q' ) {
-            oo = q;
-        } else if ( vv == 'r' ) {
-            oo = r;
-        } else if ( vv == 's' ) {
-            oo = s;
-        } else if ( vv == 't' ) {
-            oo = t;
-        } else if ( vv == 'u' ) {
-            oo = u;
-        } else if ( vv == 'v' ) {
-            oo = v;
-        } else if ( vv == 'w' ) {
-            oo = w;
-        } else if ( vv == 'x' ) {
-            oo = x;
-        } else if ( vv == 'y' ) {
-            oo = y;
-        } else if ( vv == 'z' ) {
-            oo = z;
-        } else {
-            oo = [];
-        }
-        $( '#baby-category' ).empty();
-        $( '#baby-category' ).append( '<option></option>' );
-        for ( var i = 0; i < o.length; i++ ) {
-            $( '#baby-category' ).append( '<option>' + oo[ i ] + '</option>' );
-        }
-    }
-</script>
-
-<script>
     const href = location.href;
     const queryString = href.substring(href.indexOf("?") + 1)
     if (queryString === 'error') {
@@ -354,7 +217,6 @@
     <h1 id="title">Godok</h1>
     <button id="log-in" onclick="location.href='login' "th:if="${#strings.isEmpty(session.loginMember)}">로그인</button>
     <button id="log-out" onclick="logout()" th:if="${not #strings.isEmpty(session.loginMember)}">로그아웃</button>
-
 </div>
 
 </body>
@@ -363,45 +225,79 @@
 <div class="search-box">
 
     <form action = "./search" name="searchData" method="get">
-        <select id="category" name="category" onchange="optionChange();" style="font-size: 13px; width:150px; height:60px;">
-        <option style="color: white">대분류</option>
-        <option value="a">건강 취미</option>
-        <option value="b">경제 경영</option>
-        <option value="c">대학교재</option>
-        <option value="d">소설 시 희곡</option>
-        <option value="e">어린이</option>
-        <option value="f">에세이</option>
-        <option value="g">여행</option>
-        <option value="h">역사</option>
-        <option value="i">자기계발</option>
-        <option value="j">잡지</option>
-        <option value="k">청소년</option>
-        <option value="l">초등참고서</option>
-        <option value="m">과학</option>
-        <option value="n">유아</option>
-        <option value="o">가정 살림</option>
-        <option value="p">국어 외국어 사전</option>
-        <option value="q">만화 라이트노벨</option>
-        <option value="r">사회 정치</option>
-        <option value="s">수험서 자격증</option>
-        <option value="t">예술</option>
-        <option value="u">인문학</option>
-        <option value="v">전집</option>
-        <option value="w">종교 역학</option>
-        <option value="x">IT 모바일</option>
-        <option value="y">중고등참고서</option>
-        <option value="z">달력 기타</option>
-    </select>
+        <select id="category" name="category" onchange="babyCategoryListing();" style="font-size: 13px; width:150px; height:60px;">
+            <option style="color: white" selected value="">대분류</option>
+        </select>
 
-        <select id="baby-category" name="babyCategory" style="font-size: 13px; width:150px; height:60px;">
-        <option>소분류</option>
-    </select>
+        <select id="babyCategory" name="babyCategory" style="font-size: 13px; width:150px; height:60px;">
+            <option selected value="">소분류</option>
+        </select>
 
         <input class="search" name="query" type="text" placeholder="검색어 입력" style="width: 470px">
 
         <button id="search_btn" type="submit" value="search" style="font-size: 13px; width:70px; height:60px;">검색</button>
     </form>
 </div>
+
+<script>
+    const categories = {
+        '건강 취미': ['건강', '구기', '공예', '퍼즐 컬러링북', '취미', '운동', '의학', '등산 여행', '스포츠', '반려동물', '질병치료와 예방', '취미 기타', '건강 기타', '질병과 치료법', '스포츠/레크레이션', '공예/취미', '수집'],
+        '경제 경영': ['경제', '기업', '마케팅', '창업', '투자', 'CEO', '경영', '비즈니스', '기타', '개인', '비서 교육', '비영리 기구', '비즈니스 역사', '비즈니스 작문', '사무관리', '사무비품', '사무자동화', '산업', '성공학', '요리', '전망'],
+        '수험서 자격증': ['국가자격', '민간자격', '공무원', '역량평가', '공인중개', '고등고시', '임용', '취업'],
+        '달력 기타': ['2022년 가계부', '2022년 달력', '2021년 가계부', '영어로 쓰인 한국서적', '오디오북', '출판사 제작 상품', '큰글자책'],
+        '대학교재 전문서적': ['경상계열', '공학계열', '법학계열', '사범계열', '사회과학계열', '기타', '어문학계열', '예체능계열', '의학계열', '인문계열', '자연과학계열', '방송통신대학교'],
+        '만화 라이트노벨': ['화보집 캐릭터상품', '교양만화 비평 작법', '그래픽노블', '역사/대하/서사', '만화그리기와 읽기', '본격장르만화', '성인', '학원/소년만화', '순정만화', '스포츠만화', '동물만화', '유럽/서구만화', '요리만화', '취미와 직업', '논픽션/휴먼만화', '인디만화', '웹툰', '코믹/명랑만화', '라이트노벨', '판타지', '드라마', 'SF 밀리터리', '공포 추리', '액션', '각색', '문집/선집', '세계의 문학', '요리', '일본만화', '일반'],
+        '사회 정치': ['비평/칼럼', '사회문제', '생태 환경', '교육학', '사회운동/NGO', '사회사상/사회사상사', '미래학', '지리학/지정학', '정치학/외교학/행정학', '한국정치사정/정치사', '사회학', '여성학/젠더', '언론/미디어', '법과 생활', '통일/북한관계', '국방/군사학', '계간지/무크'],
+        '소설 시 희곡': ['한국소설', '동양소설', '서양/유럽소설', '스페인/중남미소설', '세계의 문학', '추리/공포소설', '라이트 노벨', 'SF/판타지소설', '역사/무협소설', '액션/스릴러소설', '로맨스소설', '시/희곡', '기타문학', '고전문학', '문학의 이해', '테마문학', '소설', '비평 창작 이론'],
+        '어린이': ['초등 한국사', '초등1~2학년', '초등3~4학년', '초등5~6학년', '초등학습', '교과서 수록도서', '동화/명작/고전', '아동,문학론', '과학/수학/컴퓨터', '사회/역사/철학', '문화/예술/인물', '어린이 영어', '어린이 한자/중국어', '책읽기/글쓰기', '어린이 사전/도감', 'TV/만화/영화', '게임 만화/캐릭터도감', '학습만화', '어린이 문학', '어린이 교양', '어린이 세트', '교과서수록도서', '어린이 정가제 Free', '교과학습', '그림책', '논픽션', '리더스', '챕터북'],
+        '에세이': ['한국에세이', '외국 에세이', '동물 에세이', '명상 치유 에세이', '심리치유 에세이', '예술에세이', '음식 에세이', '여행 에세이', '독서에세이', '종교에세이', '사랑/연애 에세이', '노년을 위한 에세이', '자연 에세이', '명언/잠언록', '일기/편지', '유머/풍자/우화', '작은 이야기 모음', '명사 연예인 에세이', '삶의 자세와 지혜', '여성 에세이', '포토 에세이', '휴먼 에세이'],
+        '여행': ['국내 여행에세이', '국내여행', '기타여행', '북미여행', '중남미여행', '유럽여행', '독일여행', '중동여행', '아프리카여행', '동아시아여행', '동남아시아여행', '호주/뉴질랜드여행', '괌/사이판/하와이여행', '세계일주여행', '테마여행', '유학/해외연수/이민/워킹홀리데이', '지도', '해외여행', '여행회화', '남아메리카', '유렵여행', '아시아사', '아프리카 중동 중남미 오세아니아 역사', '여행 에세이', '여행일반', '기타', '동남아여행'],
+        '역사': ['동양사 동양문화', '한국사 한국문화', '역사학 이론 비평', '중국사', '일본사', '아시아사', '서양사', '유럽사', '아프리카 중동 중남미 오세아니아 역사', '세계사 세계문화', '전쟁/분쟁사', '테마로 보는 역사', '고고학', '역사와 문화 교양서', '학회/무크/계간지', '서양사 서양문화', '주제로 읽는 역사', '세계일주여행', '북미여행', '유럽여행', '중동여행', '기타'],
+        '외국도서': ['독일 도서', 'Lexile_Grade1', 'Lexile_Grade2', 'Lexile_Grade3', 'Lexile_Grade4', 'Lexile_Grade5', 'Garde10(905L-1195L)', 'Garde11(940L-1210L)', 'Garde6(665L-1000L)', 'Garde7(735L-1065L)', 'Garde8(805L-1100L)', 'Garde9(855L-1165L)'],
+        '중국도서': ['어린이', '인문 사회 역사', '참고서 수험서 교재'],
+        'ELT어학사전': ['과학기술 영어', '교사용 자료', '독학교재', '독해/듣기/문법/어휘/작문', '리더스', '아카데미 영어', '회화', '워크북', '제2외국어', 'ELT 관련'],
+        '요리': ['요리', '기타'],
+        'IT 모바일': ['인터넷 비즈니스', '운영체제', 'IT 기타', '멀티미디어', '모바일', '오피스', '웹', '코딩 교육', '컴퓨터 공학', '프로그래밍', '컴퓨터 수험서', '데이터베이스', '게임', '네트워크', '웹 사이트'],
+        '가정 살림': ['가계부', '환경', '요리', '가족', '교육', '바느질', '리빙/육아', '임신 출산', '특수교육', '가정 기타', '가정', '원예'],
+        '국어 외국어 사전': ['스피킹', '기타 동양어', '기타 서양어', '독일어', '러시아어', '스페인어', '사전', '영문법', '영어독해', '영어시험대비', '영어어휘', '외국어 기타', '영작문', '국어', '이탈리아어', '일본어', '중국어', '프랑스어', '영어전문교재'],
+        '유아': ['영아', '그림책', '4~7세', '책읽기', '놀이책', '캐릭터', '예비초등', '유아 학습', '유아 기타', '유아 그림책', '정가제'],
+        '인문학': ['교양', '기호학 언어학', '논리 비판', '철학', '문화', '학자', '출판', '신화 종교학', '심리학', '인류학', '인문 에세이', '인문학 전문사전', '독서 글쓰기', '학회', '윤리학', '종교학', '주제로 읽는 인문학', '경영자', '과학자/지식인', '교육인/언론인', '인물 기타', '문학인', '사상가/철학가', '역사 시대적인물', '예술인', '정치인', '종교인'],
+        '자기계발': ['20대의 자기계발', '기획/시간관리', '리더십', '성공', '여성 자기계발', '인간관계', '정리', '중년의 자기계발', '두뇌계발', '취업/유망직업', '화술/협상/회의', '행복/힐링', '유학/이민', '처세술/삶의자세'],
+        '잡지': ['건강/의학', '경제/시사', '과학/기술', '교양/문예/인문', '교육', '예술', '기타', '리빙/육아', '연예/영화/만화', '어린이/청소년', '여성/남성', '여행/스포츠/취미', '요리', '정기구독', '종교', '컴퓨터/게임/그래픽', '컴퓨터/과학/게임'],
+        '전집': ['0-3세', '4-7세', '단행본 전집', '초등 저학년', '초등 고학년', '출판사별보기', '토이북 교구', '문학/논술/고전', '영어 학습', '인물/역사/사회', '자연/과학/수학', '전래 명작동화', '창작동화', '영아', '청소년 일반'],
+        '종교 역학': ['천주교', '기독교', '명상', '불교', '세계종교', '역학', '일반', '성경'],
+        '중고등참고서': ['EBS-고등', 'EBS-중등', '고등-문제집', '고등-자습서', '고등-영어전문', '고등학교 출판사별', '중등-논술', '고등-수시논술', '고등-수능기출', '예비고등', '중1-문제집', '중1-자습서', '중2-문제집', '중2-자습서', '중3-문제집', '중3-자습서', '중등-경시대회', '중학교 출판사별', '중등-국어독해', '중등-수학전문', '중등-영어전문', '특목고대비', '학습/기타', '고등-입시'],
+        '청소년': ['교육', '시험', '인문', '문학', '문화', '공부', '역사', '자기계발', '철학', '기타'],
+        '초등참고서': ['1학년', '2학년', '3학년', '4학년', '5학년', '6학년', 'EBS 초등', '경시 올림피아드', '국어전문교재', '수학전문교재', '미취학아동', '서술형.논술형', '영재교육원대비', '예비중', '전과 자습서', '영어전문교재', '초등학교 출판사별', '초등한국사', '중국어', '학습교구', '학습월간지(초등)', 'EBS초등학교/영어', '미취학아동/기타', '초등 학습자료 교구'],
+        '예술': ['미디어', '건축', '대중문화', '무용', '미술 음악', '취미', '공연', '예술기행', '일반', '예술치료', '디자인'],
+        '과학': ['공학', '교양과학', '농업', '의학', '물리학', '생명과학', '수학', '지구과학', '천문학', '화학'],
+    }
+
+    function categoryListing() {
+        let html = `<option value="">대분류</option>`
+        for (const category of Object.keys(categories)) {
+            html += `<option value="${category}">${category}</option>`
+        }
+        $('#category').html(html)
+    }
+
+    function babyCategoryListing() {
+        let key = $("#category option:selected").val()
+        let html = `<option value="">소분류</option>`
+        if (key.length != 0) {
+            for (const value of categories[key])
+                html += `<option value="${value}">${value}</option>\``
+        }
+        $('#babyCategory').html(html)
+    }
+
+    function test() {
+        console.log('대분류 : ' + $("#category option:selected").val())
+        console.log('소분류 : ' + $("#babyCategory option:selected").val())
+    }
+    categoryListing()
+
+</script>
 
 </body>
 
